# Rust-Rest-API-Example

./: .env  .gitignore  Cargo.toml  LICENSE  README.md
src/: config.rs  main.rs
src/db/: database.rs
src/helpers/: image.rs  jwt_auth.rs  mod.rs  token.rs
src/http/: mod.rs  route_check_email.rs  route_check_username.rs  route_default.rs  route_delete_user.rs  route_get_user.rs  route_get_users.rs  route_login.rs  route_refresh_token.rs  route_save_user.rs  route_update_user.rs
src/models/: error.rs  users.rs
